--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Simulador</string>
+
+    <string name="txt_simulators">Botão de simulação de partidas</string>
+    <string name="img_description">Imagem time mandante</string>
 </resources>
