--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Simulator</string>
+    <string name="txt_simulators">Match simulator button</string>
+    <string name="img_description">Imagem time mandante</string>
 </resources>
