--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">Simulador</string>
 
     <string name="txt_simulators">Botão de simulação de partidas</string>
-    <string name="img_description">Imagem time mandante</string>
+    <string name="dc_imgteam1">Imagem time mandante</string>
+    <string name="dc_imgteam2">Imagem do time adversário</string>
 </resources>
